--- a/Virtual Lab/Composite wall/procedure.html
+++ b/Virtual Lab/Composite wall/procedure.html
@@ -213,24 +213,28 @@ ul li a:hover .name span{
             <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
         </div>
         <div class="main">
-            <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
+            <p><strong>AIM:</strong>To determine total Thermnal resistance and Thermal Conductivity across the width of composite wall.</p>
             <p><strong>APPARATUS:</strong><br>
-            The apparatus consists of a metal pipe with two layers of insulation. An electric heating coil wound on a silica rod is placed at the center. The ends are thickly insulated to prevent heat loss so that heat flows only in a radial direction. Three thermocouples each are placed at different radii to measure the temperature distribution within the cylinder.</p>
-            <p><strong>TECHNICAL DATA:</strong><br>
-            Location of thermocouples 1, 2, 3 at a radius r₁ = 25mm<br>
-            Location of thermocouples 4, 5, 6 at a radius rm = 50mm<br>
-            Location of thermocouples 7, 8, 9 on glass wool<br>
-            Location of thermocouples 10, 11,12 at a radius ro = 75mm<br>
-            Length of the pipe                                 = 500 mm<br></p>
+            The apparatus consists of central heater sandwcihed between two sheets, dimmer stat, digital voltmeter and ammeter.</p>
+            <p><strong>SPECIFICATIONS:</strong><br>
+            Enclosure size               : 300*300*300 mm<br>
+            Slab diameter                : 200 mm<br>
+            Thickness of mild steel (b1) = 25 mm<br>
+            Thickness of Bakelite (b2)   = 20 mm<br>
+            Thickness of wood (b3)       = 18 mm<br>
+	    Total Thickness of slab (b)  = 63 mm <br></p>
             <p><strong>PROCEDURE:</strong><br>
-            1. Connect the equipment to a 230 V, 5 amps, 50 Hz electrical source <br>
-            2. Turn the dimmerstat knob clockwise and fix the heat input to a desired wattage.<br>
-            3. Allow the equipment to stabilize and attain steady state<br>
-            4. Turn the thermocouple selector switch knob clockwise and note down temperaturesT1 to T12<br>
-            5. Repeat the experiment for different heat inputs.<br>
+            1. Arrange the plates in proper fahion on both sides of heayter plates.<br>
+            2. Opearte the hand press to ensure perfect contact between plates.<br>
+            3. Close the box by acrylic cover sheet to achieve proper environmental condition.<br>
+            4. Start the main switch amd switch on the heater. <br>
+            5. Adjust the voltage input to heater through dimmerstat.<br>
+            6. After reaching the study state, take the readings of 8 thermocouples, voltmeter and ammeter.<br>
+	    7. Note down the readings in observation table.<br>
+	    8. Make the dimmer knob to "zero" position and then put main switch off.<br>
             <p><strong>SPECIMEN CALCULATIONS:</strong></p>
             <p><strong>Result</strong><br>
-            Thermal conductivity of given insulating powder=  W/mK</p>
+            </p>
             
 </p></div></div>
 </body>
