--- a/Virtual Lab/Composite wall/procedure.html
+++ b/Virtual Lab/Composite wall/procedure.html
@@ -132,7 +132,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\procedure.html">
+                <a href="C:\Users\hp\Desktop\Virtual Lab\Composite wall\procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
