--- a/Virtual Lab/Composite wall/procedure.html
+++ b/Virtual Lab/Composite wall/procedure.html
@@ -210,7 +210,7 @@ ul li a:hover .name span{
 
     <div class="procedure">
         <div class="hea">
-            <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
+            <h2>Test Procedure for Determining Thermal Resistance and Conductivity of the Composite wall</h2>
         </div>
         <div class="main">
             <p><strong>AIM:</strong>To determine total Thermnal resistance and Thermal Conductivity across the width of composite wall.</p>
