--- a/Virtual Lab/Composite wall/procedure.html
+++ b/Virtual Lab/Composite wall/procedure.html
@@ -224,7 +224,7 @@ ul li a:hover .name span{
             Thickness of wood (b3)       = 18 mm<br>
 	    Total Thickness of slab (b)  = 63 mm <br></p>
             <p><strong>PROCEDURE:</strong><br>
-            1. Arrange the plates in proper fahion on both sides of heayter plates.<br>
+            1. Arrange the plates in proper fahion on both sides of heater plates.<br>
             2. Opearte the hand press to ensure perfect contact between plates.<br>
             3. Close the box by acrylic cover sheet to achieve proper environmental condition.<br>
             4. Start the main switch amd switch on the heater. <br>
@@ -232,25 +232,25 @@ ul li a:hover .name span{
             6. After reaching the study state, take the readings of 8 thermocouples, voltmeter and ammeter.<br>
 	    7. Note down the readings in observation table.<br>
 	    8. Make the dimmer knob to "zero" position and then put main switch off.<br></p>
-            <p><strong>SPECIMEN CALCULATIONS:</strong>
+            <p><strong>CALCULATIONS:</strong>
 	    Mean readings : <br>
-	    Ta = (T1+T2)/2<br>
-	    Tb= (T3+t4)/2<br>
-	    Tc=(T5+T6)/2<br>
-	    Td=(T7+T8)/2<br>
+	    Ta = (T1+T2) / 2<br>
+	    Tb= (T3+t4) / 2<br>
+	    Tc=(T5+T6) / 2<br>
+	    Td=(T7+T8) / 2<br>
 	    (i). Rate of heat supplied, Q= V*I <br>
-	    (ii). Heat Flux = q = Q/(2*A) W/m^2    where A=(π/4)*d^2  , d=hald dia of plates<br>
-	    1. Total Thermal Resistance of composite slab  R total = (Ta-Td)/q  m^2 K/W <br>
-	    2. Thermal conductivity of composite slab  K composite = (q*b) / (Ta-Td)  W/m K <br>
+	    (ii). Heat Flux = q = Q/(2*A)  W/m^2    where A=(π/4)*d^2  ,    d=half dia of plates<br>
+	    1. Total Thermal Resistance of composite slab  R total = (Ta-Td) / q    m^2 K/W <br>
+	    2. Thermal conductivity of composite slab  K composite = (q*b) / (Ta-Td)    W/m K <br>
 	       where b = Total thickness of composite slab. <br>
-	    3. Thermal resistance of Mild steel = (Ta-Tb)/q <br>
-	       Thermal resistance of Bakelite = (Tb-tc)/q <br>
-	       Thermal resistance of wood = (Tc-Tb)/q <br>
-	    4. Thermal comductivity of Mild steel = (q*b1) / (Ta-Tb)  W/mK <br>
-	       Thermal conductivity of Bakelite = (q*b2) / (Tb-Tc)  W/mK <br>
-	       Thermal conductivity of wood = (q*b3) / (Tc-Td)  W/mK<br> </p>
-	    <p><strong>Graph:</strong>Draw a graph between the thickness of the slab material and temperature.<br> </p>
-            <p><strong>Result</strong><br>
+	    3. Thermal resistance of Mild steel = (Ta-Tb) / q <br>
+	       Thermal resistance of Bakelite = (Tb-tc) / q <br>
+	       Thermal resistance of wood = (Tc-Tb) / q <br>
+	    4. Thermal comductivity of Mild steel = (q*b1) / (Ta-Tb)    W/mK <br>
+	       Thermal conductivity of Bakelite = (q*b2) / (Tb-Tc)   N W/mK <br>
+	       Thermal conductivity of wood = (q*b3) / (Tc-Td)    W/mK<br> </p>
+	    <p><strong>GRAPH:</strong>Draw a graph between the thickness of the slab material and temperature.<br> </p>
+            <p><strong>RESULT:</strong><br>
             </p>
             
 </p></div></div>
