--- a/Virtual Lab/Composite wall/procedure.html
+++ b/Virtual Lab/Composite wall/procedure.html
@@ -224,7 +224,7 @@ ul li a:hover .name span{
             Thickness of wood (b3)       = 18 mm<br>
 	    Total Thickness of slab (b)  = 63 mm <br></p>
             <p><strong>PROCEDURE:</strong><br>
-            1. Arrange the plates in proper fahion on both sides of heater plates.<br>
+            1. Arrange the plates in proper fashion on both sides of heater plates.<br>
             2. Opearte the hand press to ensure perfect contact between plates.<br>
             3. Close the box by acrylic cover sheet to achieve proper environmental condition.<br>
             4. Start the main switch amd switch on the heater. <br>
@@ -235,7 +235,7 @@ ul li a:hover .name span{
             <p><strong>CALCULATIONS:</strong>
 	    Mean readings : <br>
 	    Ta = (T1+T2) / 2<br>
-	    Tb= (T3+t4) / 2<br>
+	    Tb= (T3+T4) / 2<br>
 	    Tc=(T5+T6) / 2<br>
 	    Td=(T7+T8) / 2<br>
 	    (i). Rate of heat supplied, Q= V*I <br>
