--- a/Virtual Lab/Conduction in a metal rod/procedure.html
+++ b/Virtual Lab/Conduction in a metal rod/procedure.html
@@ -213,15 +213,17 @@ ul li a:hover .name span{
             <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
         </div>
         <div class="main">
-            <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
+            <p><strong>AIM:</strong>To determine the thermal conductivity of given metal rod.</p>
             <p><strong>APPARATUS:</strong><br>
-            The apparatus consists of a metal pipe with two layers of insulation. An electric heating coil wound on a silica rod is placed at the center. The ends are thickly insulated to prevent heat loss so that heat flows only in a radial direction. Three thermocouples each are placed at different radii to measure the temperature distribution within the cylinder.</p>
-            <p><strong>TECHNICAL DATA:</strong><br>
-            Location of thermocouples 1, 2, 3 at a radius r₁ = 25mm<br>
-            Location of thermocouples 4, 5, 6 at a radius rm = 50mm<br>
-            Location of thermocouples 7, 8, 9 on glass wool<br>
-            Location of thermocouples 10, 11,12 at a radius ro = 75mm<br>
-            Length of the pipe                                 = 500 mm<br></p>
+            The apparatus consists of a BRASS rod. Haet is provided by means of band better at one end and released through water jacket arrangement. Thermocouples are provided at the suitable points to measure the surface and water temperatures. Proper insulation is provided to minimize the heat loss. The temperature is shown by means of the didital temperature indicator on the control panel, which also consists of heater regulator and other accessories instrumentation having good aesthetic looks and safe design.</p>
+            <p><strong>SPECIFICATIONS:</strong><br>
+            Specimen material      :   Brass rod<br>
+	    Specimen size          :   ⌀ 20 mm, 500 mm long <br>
+	    Voltmeter              :   Digital type, 0-300 v <br>
+	    Ammeter                :   Digital type, 0-20 amps, AC ,<br>
+	    Dimmerstat             :   0-230 v, 20 amps  <br>
+	    Temperature  Indicator :   Digital Type, 0-300°C, K type <br>
+	    Thermocouples Used     :   11 nos.<br></p>
             <p><strong>PROCEDURE:</strong><br>
             1. Connect the equipment to a 230 V, 5 amps, 50 Hz electrical source <br>
             2. Turn the dimmerstat knob clockwise and fix the heat input to a desired wattage.<br>
