--- a/Virtual Lab/Natural convection/procedure.html
+++ b/Virtual Lab/Natural convection/procedure.html
@@ -213,22 +213,42 @@ ul li a:hover .name span{
             <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
         </div>
         <div class="main">
-            <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
+            <p><strong>AIM:</strong> To determine the surface heat transfer coefficient for a vertical tube losing heat by natural convection.<br></p>
             <p><strong>APPARATUS:</strong><br>
-            The apparatus consists of a metal pipe with two layers of insulation. An electric heating coil wound on a silica rod is placed at the center. The ends are thickly insulated to prevent heat loss so that heat flows only in a radial direction. Three thermocouples each are placed at different radii to measure the temperature distribution within the cylinder.</p>
-            <p><strong>TECHNICAL DATA:</strong><br>
-            Location of thermocouples 1, 2, 3 at a radius r₁ = 25mm<br>
-            Location of thermocouples 4, 5, 6 at a radius rm = 50mm<br>
-            Location of thermocouples 7, 8, 9 on glass wool<br>
-            Location of thermocouples 10, 11,12 at a radius ro = 75mm<br>
-            Length of the pipe                                 = 500 mm<br></p>
+            The apparatus consists of a stainless steel tube fitted in a rectangular duct in a vertical position. The duct is open at the top and bottom. An electric heating element is kept in center of vertical tube, which in turn heats the tube surface longitudinally. The heat is lost from the tube to the surrounding air by natural convection. The temperature of vertical tube is measured by seven thermocouples at different locations and thermocouple T_{8} measures the duct temperature. The heat energy input is measured by ammeter and voltmeter.<br></p>
+            <p><strong>SPECIFICATIONS:</strong><br>
+	    Specimen		 	 : Stainless Steel tube<br>
+	    Size of the Specimen 	 : I.D 38mm/O.D 44mm, 500mm length <br>
+	    Heater		 	 : Nichrome wire type heater along its length <br>
+	    Thermocouples used   	 : 8nos.<br>
+	    Ammeter		 	 : Digital type, 0-2amps, AC  <br>
+	    Voltmeter           	 : Digital type, 0-300volts, AC   <br>
+	    Dimmerstat for heating coil  : 0-230 V, 2 amps, AC power <br>
+	    Enclosure with acrylic door  : For visual display of test section (fixed)
+            <br></p>
+	    <pr><strong>THEORY:</strong><br>
+	    Convection is a mode of heat transfer generally takes place in liquids and gases. Consider a fluid flow over a heated surface, the molecules of fluid adjacent to the surface absorb heat and become hot. On heating the molecules become lighter due to decrease in density, they rise up and the cold molecules of higher density come down in contact of heated surface. In this way a motion of molecules set up in fluid due to developed density gradient.<br>
+	    Q= h*A*(Ts - T∞)  W
+	    Where A = surface area, m^2
+	    h = heat transfer coefficient,  w / (m^2) * k
+	    T∞ = ambient temperature
+	    Ts = surface temperature</pr>
             <p><strong>PROCEDURE:</strong><br>
-            1. Connect the equipment to a 230 V, 5 amps, 50 Hz electrical source <br>
-            2. Turn the dimmerstat knob clockwise and fix the heat input to a desired wattage.<br>
-            3. Allow the equipment to stabilize and attain steady state<br>
-            4. Turn the thermocouple selector switch knob clockwise and note down temperaturesT1 to T12<br>
-            5. Repeat the experiment for different heat inputs.<br>
-            <p><strong>SPECIMEN CALCULATIONS:</strong></p>
+            1. Ensure that all ON/OFF switches given on the panel are at OFF position.<br>
+	    2. Ensure that the knob is at zero position, provided on the panel.<br>
+	    3. Now switch on the main power supply (220 V AC, 50 Hz).<br>
+	    4. Switch on the panel with the help of mains ON/OFF switch given on the panel.<br>
+	    5. Fix the power input to the heater with the help of variac, voltmeter and ammeter provided.<br>
+	    6. Take thermocouple, voltmeter & ammeter readings when steady state is reached.<br>
+	    7. When experiment is over, switch off heater first.<br>
+	    8. Adjust variac to zero position.<br>
+	    9. Switch off the panel with the help of Mains On/Off switch given on the panel.<br>
+	    10. Switch off power supply to panel.<br>
+            <p><strong>SPECIMEN CALCULATIONS:</strong><br>
+	    The rate of energy input to heat the steel rod Q = V*I = _______W<br>
+	    The average surface temperature of the steel rod, Ts= (T1+T2+T3+T4+T5+T6+T7) / 7 =  _______ K <br>
+	    Thus the actual convection heat transfer coefficient can be evaluated as, <br>
+	     h = Q / (A*(Ts - T∞ ) W/m^2 K where A = πdl, m² <br></p>
             <p><strong>Result</strong><br>
             Thermal conductivity of given insulating powder=  W/mK</p>
             
