--- a/Virtual Lab/Emissivity/procedure.html
+++ b/Virtual Lab/Emissivity/procedure.html
@@ -132,7 +132,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\procedure.html">
+                <a href="C:\Users\hp\Desktop\Virtual Lab\Emissivity\procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -210,25 +210,38 @@ ul li a:hover .name span{
 
     <div class="procedure">
         <div class="hea">
-            <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
+            <h2>Test Procedure for Emissivity measurement of Radiating surfaces </h2>
         </div>
         <div class="main">
-            <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
+            <p><strong>AIM:</strong>To measure the emissivity of the test surface in comparison to black surface.</p>
             <p><strong>APPARATUS:</strong><br>
-            The apparatus consists of a metal pipe with two layers of insulation. An electric heating coil wound on a silica rod is placed at the center. The ends are thickly insulated to prevent heat loss so that heat flows only in a radial direction. Three thermocouples each are placed at different radii to measure the temperature distribution within the cylinder.</p>
-            <p><strong>TECHNICAL DATA:</strong><br>
-            Location of thermocouples 1, 2, 3 at a radius r₁ = 25mm<br>
-            Location of thermocouples 4, 5, 6 at a radius rm = 50mm<br>
-            Location of thermocouples 7, 8, 9 on glass wool<br>
-            Location of thermocouples 10, 11,12 at a radius ro = 75mm<br>
-            Length of the pipe                                 = 500 mm<br></p>
+             Emissivity measuring apparatus.</p>
+            <p><strong>SPECIFICATIONS:</strong><br>
+	    Specimen material : Brass<br>
+            Specimen Size :  150 mm, 6 mm thickness (gray & black body)<br>
+	    Voltmeter : Digital type, 0-300v <br>
+	    Ammeter : Digital type, 0-3 amps <br>
+	    Dimmerstat : 0-240 V, 2 amps <br>
+	    Temperature Indicator : Digital type, 0-300°C, K type <br>
+	    Thermocouple Used : 7 nos.<br>
+	    Heater : Sand witched type Nichrome heater, 400 W<br></p>
             <p><strong>PROCEDURE:</strong><br>
-            1. Connect the equipment to a 230 V, 5 amps, 50 Hz electrical source <br>
-            2. Turn the dimmerstat knob clockwise and fix the heat input to a desired wattage.<br>
-            3. Allow the equipment to stabilize and attain steady state<br>
-            4. Turn the thermocouple selector switch knob clockwise and note down temperaturesT1 to T12<br>
-            5. Repeat the experiment for different heat inputs.<br>
-            <p><strong>SPECIMEN CALCULATIONS:</strong></p>
+	    1. Switch on the heater and adjust the voltage input to both the discs through dimmer-stat. <br>
+	    2. Operate the dimmerstat very slowly and give same power input to both the heaters (Say 50 V by using/operating cam switches provided). <br>
+	    3. When steady state is reached note down the temperatures T1 to T7 by rotating the temperature selection switch. <br>
+	    4. Also note down the voltmeter and ammeter readings. <br>
+	    5. Repeat the experiment for different heat inputs.<br> </p>
+	    <p><strong>THEORY:</strong><br>
+	    All substances at all temperatures emit thermal radiation. Thermal radiation is an electromagnetic wave and doesn’t require any material medium for propagation. All bodies can emit radiation and have also the capacity to absorb all or part of the radiation coming from the surrounding towards it. An idealized black surface is one which absorbs all the incident radiation with reflectivity and 
+	    transmissivity equal to zero. The emissivity of the surface is defined as the ratio of emissive power of a surface to that of a black surface at the same temperature. 
+ 	    Any hot body maintained by a constant heat source, loses heat to surroundings by conduction,convection and radiation. If two bodies made of same geometry are heated under identical conditions, the heat loss by conduction and convection can be assumed same for both the bodies, 
+	    when the difference in temperatures between these two bodies is not high. In such a case, when one body is black & the other body is gray from the values of different surface temperatures of the two bodies maintained by a constant power source emissivity can be calculated.<br>
+	    The heat loss by radiation depends on:
+	    a) Characteristic of the material <br>
+	    b) Geometry of the surface and <br>
+	    c) Temperature of the surface <br>
+	    <p><strong>CALCULATIONS:</strong></p>
+	    Q = 
             <p><strong>Result</strong><br>
             Thermal conductivity of given insulating powder=  W/mK</p>
             
