--- a/Virtual Lab/Emissivity/procedure.html
+++ b/Virtual Lab/Emissivity/procedure.html
@@ -241,7 +241,7 @@ ul li a:hover .name span{
 	    b) Geometry of the surface and <br>
 	    c) Temperature of the surface <br>
 	    <p><strong>CALCULATIONS:</strong></p>
-	    Q = 
+	    ε=[<strong>T</strong>b^4 -<strong>T</strong>a^4] / [<strong>T</strong>g^4 -<strong>T</strong>a^4]
             <p><strong>Result</strong><br>
             Thermal conductivity of given insulating powder=  W/mK</p>
             
