--- a/Virtual Lab/Emissivity/procedure.html
+++ b/Virtual Lab/Emissivity/procedure.html
@@ -232,11 +232,9 @@ ul li a:hover .name span{
 	    4. Also note down the voltmeter and ammeter readings. <br>
 	    5. Repeat the experiment for different heat inputs.<br> </p>
 	    <p><strong>THEORY:</strong><br>
-	    All substances at all temperatures emit thermal radiation. Thermal radiation is an electromagnetic wave and doesn’t require any material medium for propagation. All bodies can emit radiation and have also the capacity to absorb all or part of the radiation coming from the surrounding towards it. An idealized black surface is one which absorbs all the incident radiation with reflectivity and 
-	    transmissivity equal to zero. The emissivity of the surface is defined as the ratio of emissive power of a surface to that of a black surface at the same temperature. 
- 	    Any hot body maintained by a constant heat source, loses heat to surroundings by conduction,convection and radiation. If two bodies made of same geometry are heated under identical conditions, the heat loss by conduction and convection can be assumed same for both the bodies, 
+	    All substances at all temperatures emit thermal radiation. Thermal radiation is an electromagnetic wave and doesn’t require any material medium for propagation. All bodies can emit radiation and have also the capacity to absorb all or part of the radiation coming from the surrounding towards it. An idealized black surface is one which absorbs all the incident radiation with reflectivity and  transmissivity equal to zero. The emissivity of the surface is defined as the ratio of emissive power of a surface to that of a black surface at the same temperature. Any hot body maintained by a constant heat source, loses heat to surroundings by conduction,convection and radiation. If two bodies made of same geometry are heated under identical conditions, the heat loss by conduction and convection can be assumed same for both the bodies, 
 	    when the difference in temperatures between these two bodies is not high. In such a case, when one body is black & the other body is gray from the values of different surface temperatures of the two bodies maintained by a constant power source emissivity can be calculated.<br>
-	    The heat loss by radiation depends on:
+	    The heat loss by radiation depends on: <br>
 	    a) Characteristic of the material <br>
 	    b) Geometry of the surface and <br>
 	    c) Temperature of the surface <br>
