--- a/Virtual Lab/Lagged cylinder/procedure.html
+++ b/Virtual Lab/Lagged cylinder/procedure.html
@@ -210,7 +210,7 @@ ul li a:hover .name span{
 
     <div class="procedure">
         <div class="hea">
-            <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
+            <h2>Test Procedure for Determining Thermal Conductivity Of given Insulating Powder. </h2>
         </div>
         <div class="main">
             <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
@@ -229,7 +229,13 @@ ul li a:hover .name span{
             4. Turn the thermocouple selector switch knob clockwise and note down temperaturesT1 to T12<br>
             5. Repeat the experiment for different heat inputs.<br>
             <p><strong>SPECIMEN CALCULATIONS:</strong></p>
-            <p><strong>Result</strong><br>
+	    1. Mean readings: <br>
+		Tinside = (T1+T2+T3)/3  <br>           Tmiddle=(T4+T5+T6)/3  <br>           Toutside= (T10+T11+12)/3  <br>
+	    2. Actual heat input : <br>
+		Qact = V*I  (volts)  <br>
+	    3. 
+	
+            <p><strong>RESULT:</strong><br>
             Thermal conductivity of given insulating powder=  W/mK</p>
             
 </p></div></div>
