--- a/Virtual Lab/Lagged sphere/procedure.html
+++ b/Virtual Lab/Lagged sphere/procedure.html
@@ -132,7 +132,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\procedure.html">
+                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged sphere\procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -213,9 +213,12 @@ ul li a:hover .name span{
             <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
         </div>
         <div class="main">
-            <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
+            <p><strong>AIM:</strong> To determine the thermal conductivity of an insulating powder..</p>
             <p><strong>APPARATUS:</strong><br>
-            The apparatus consists of a metal pipe with two layers of insulation. An electric heating coil wound on a silica rod is placed at the center. The ends are thickly insulated to prevent heat loss so that heat flows only in a radial direction. Three thermocouples each are placed at different radii to measure the temperature distribution within the cylinder.</p>
+            </The apparatus consists of two concentric copper spheres. Heating coil is provided in the inner sphere. The space between the inner and outer spheres are filled by the insulating 
+powder whose thermal conductivity is to be determined. Chromel-Alumel thermocouples 
+are used to record the temperatures. Thermocouples 1 to 6 are embedded on the surface 
+of inner sphere and 7 to 12 are embedded on the outer shell surface.p>
             <p><strong>TECHNICAL DATA:</strong><br>
             Location of thermocouples 1, 2, 3 at a radius r₁ = 25mm<br>
             Location of thermocouples 4, 5, 6 at a radius rm = 50mm<br>
