--- a/Virtual Lab/Emissivity/Calculator.html
+++ b/Virtual Lab/Emissivity/Calculator.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Procedure</title>
+        <title>Calculator</title>
         <!-- change or write your page title with the help of title tags-->
         <link rel="stylesheet" type="text/css" href="nav.css">
         <!-- connect css file with html useing link tag -->
@@ -122,7 +122,7 @@ ul li a:hover .name span{
             <li>
                 <!--The HTML li element is used to represent an item in a list. ... In menus and unordered lists-->
                 <!--the a tag defines a hyperlink, which is used to link from one page to another-->
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Main\Experiments.html">
+                <a href="https://project-gpreht.github.io/virtuallab/">
                     <!-- this anchor text for link your home to another page -->
                     <div class="icon">
                         <i class="fa fa-home" aria-hidden="true"></i><!-- this is home icon link get form fornt-awesome icon for home button -->	
@@ -133,7 +133,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Emissivity\procedure.html">
+                <a href="./procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -144,7 +144,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Emissivity\simulator.html">
+                <a href="./simulator.html">
                     <!-- this anchor text for link your service page to another page -->
                     <div class="icon">
                         <i class="fa fa-cogs" aria-hidden="true"></i><!-- this is cogs icon link get form fornt-awesome iocn for service menu -->	
@@ -155,7 +155,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Emissivity\Calculator.html">
+                <a href="./Calculator.html">
                     <!-- this anchor text for link your Blog page to another page -->
                     <div class="icon">
                         <i class="fa fa-book" aria-hidden="true"></i><!-- this is Book icon link get form fornt-awesome icon for Blog --> 	
@@ -177,6 +177,80 @@ ul li a:hover .name span{
                 </a>
             </li>
         </ul>
+        </div>
+        <div class="cal">
+            <h1>Observation Table:</h1>
+<table>
+    <tr>
+        <th colspan="3">Heat Input</th>
+        <th colspan="3">Temperature of gray surface <sup>0</sup>C</th>
+        <th colspan="3">Temperature of black surface <sup>0</sup>C</th>
+        <th>Chamber temperature <sup>0</sup>C</th>
+    </tr>
+    <tr>
+        <th>V(volt)</th>
+        <th>I(amp)</th>
+        <th>V*I(watts)</th>
+        <th>T<sub>1</sub></th>
+        <th>T<sub>2</sub></th>
+        <th>T<sub>3</sub></th>
+        <th>T<sub>4</sub></th>
+        <th>T<sub>5</sub></th>
+        <th>T<sub>6</sub></th>
+        <th>T<sub>7</sub></th>
+    </tr>
+    <tr>
+        <td><input type="number" id="V" style="width:100px"></td>
+        <td><input type="number" id="I" style="width:100px"></td>
+        <td id="power"></td>
+        <td><input type="number" id="t1" style="width:80px"></td>
+        <td><input type="number" id="t2" style="width:80px"></td>
+        <td><input type="number" id="t3" style="width:80px"></td>
+        <td><input type="number" id="t4" style="width:80px"></td>
+        <td><input type="number" id="t5" style="width:80px"></td>
+        <td><input type="number" id="t6" style="width:80px"></td>
+        <td><input type="number" id="t7" style="width:200px"></td>
+    </tr>
+</table>
+<button id="Calculate" onclick="calculate()">Calculate</button>
+<p id="result"></p>
+<style>
+    table,th,td{
+        border:1px solid black;
+        border-collapse: collapse;
+    }
+</style>
+<script>
+    function calculate(){
+        var V=document.getElementById('V').value;
+        var I=document.getElementById('I').value;
+        if(!isNaN(V) && !isNaN(I)){
+            var Q=V*I;
+            Q=Q.toFixed(2);
+            document.getElementById('power').innerHTML=Q;
+            var t1=parseInt(document.getElementById('t1').value);
+            var t2=parseInt(document.getElementById('t2').value);
+            var t3=parseInt(document.getElementById('t3').value);
+            var t4=parseInt(document.getElementById('t4').value);
+            var t5=parseInt(document.getElementById('t5').value);
+            var t6=parseInt(document.getElementById('t6').value);
+            var t7=parseInt(document.getElementById('t7').value)+273;
+            //document.getElementById('result').innerHTML=Math.pow(3,4);
+            //document.getElementById('result').innerHTML=(t1+t2+t3)/3;
+            if(!isNaN(t1) && !isNaN(t2) && !isNaN(t3) && !isNaN(t4) && !isNaN(t5) && !isNaN(t6) && !isNaN(t7)){
+                var tg=((t1+t2+t3)/3)+273;
+                var tb=((t4+t5+t6)/3)+273;
+                var res=`<h1>Calculation:</h1>`;
+                res+=`<p>Average testing body temperature Tg=<math><mfrac style="font-size:25px"><mn>T1+T2+T3</mn><mi>3</mi></mfrac></math>=${tb}K</p>`;
+                res+=`<p>Average black body temperature Tb=<math><mfrac style="font-size:25px"><mn>T4+T5+T6</mn><mi>3</mi></mfrac></math>=${tg}K</p>`;
+                var r=(Math.pow(tb,4)-Math.pow(t7,4))/(Math.pow(tg,4)-Math.pow(t7,4));
+                r=r.toFixed(2);
+                res+=`<p>Emissivity of a testing body Et=<math><mfrac style="font-size:25px"><mn><p>Tb<sup>4</sup>-Ta<sup>4</sup></p></mn><mi><p>Tg<sup>4</sup>-Ta<sup>4</sup></p></mi></mfrac></math>=${r}</p>`;
+                document.getElementById('result').innerHTML=res;
+            }
+        }
+    }
+</script>
         </div>
 <style>
     .menu{
@@ -207,6 +281,19 @@ ul li a:hover .name span{
     position:relative;
     left:1px;
 }
+.cal{
+    position:absolute;/* set the position of the navigation bar*/
+	top: 460px;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+button{
+    position:absolute;/* set the position of the navigation bar*/
+	top: 210px;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+
     </style>
 </body>
 </html>
