--- a/Virtual Lab/Lagged cylinder/procedure.html
+++ b/Virtual Lab/Lagged cylinder/procedure.html
@@ -121,7 +121,7 @@ ul li a:hover .name span{
             <li>
                 <!--The HTML li element is used to represent an item in a list. ... In menus and unordered lists-->
                 <!--the a tag defines a hyperlink, which is used to link from one page to another-->
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Main\Experiments.html">
+                <a href="https://project-gpreht.github.io/virtuallab/">
                     <!-- this anchor text for link your home to another page -->
                     <div class="icon">
                         <i class="fa fa-home" aria-hidden="true"></i><!-- this is home icon link get form fornt-awesome icon for home button -->	
@@ -132,7 +132,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\procedure.html">
+                <a href="./procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -143,7 +143,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\simulator.html">
+                <a href="./simulator.html">
                     <!-- this anchor text for link your service page to another page -->
                     <div class="icon">
                         <i class="fa fa-cogs" aria-hidden="true"></i><!-- this is cogs icon link get form fornt-awesome iocn for service menu -->	
@@ -154,7 +154,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\Calculator.html">
+                <a href="./Calculator.html">
                     <!-- this anchor text for link your Blog page to another page -->
                     <div class="icon">
                         <i class="fa fa-book" aria-hidden="true"></i><!-- this is Book icon link get form fornt-awesome icon for Blog --> 	
@@ -207,10 +207,9 @@ ul li a:hover .name span{
     left:1px;
 }
     </style>
-
     <div class="procedure">
         <div class="hea">
-            <h2>Test Procedure for Determining Thermal Conductivity Of given Insulating Powder. </h2>
+            <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
         </div>
         <div class="main">
             <p><strong>AIM:</strong>To plot the radial temperature distribution in the composite cylinder and to determine the thermal conductivity of the pipe insulation.</p>
@@ -228,14 +227,7 @@ ul li a:hover .name span{
             3. Allow the equipment to stabilize and attain steady state<br>
             4. Turn the thermocouple selector switch knob clockwise and note down temperaturesT1 to T12<br>
             5. Repeat the experiment for different heat inputs.<br>
-            <p><strong>SPECIMEN CALCULATIONS:</strong></p>
-	    1. Mean readings: <br>
-		Tinside = (T1+T2+T3)/3  <br>           Tmiddle=(T4+T5+T6)/3  <br>           Toutside= (T10+T11+12)/3  <br>
-	    2. Actual heat input : <br>
-		Qact = V*I  (volts)  <br>
-	    3. 
-	
-            <p><strong>RESULT:</strong><br>
+            <p><strong>Result</strong><br>
             Thermal conductivity of given insulating powder=  W/mK</p>
             
 </p></div></div>
@@ -244,19 +236,21 @@ ul li a:hover .name span{
     .main{
         border: 2px solid black;
         width:800px;
-        height:1000px;
-        position: relative;
-        top:100px;
-        left:250px;
+        height:600px;
+        position:absolute;/* set the position of the navigation bar*/
+	    top: 700px;
+	    left: 50%;
+	    transform: translate(-50%,-50%);
         background-color: lightgoldenrodyellow;
     }
     .hea{
     border:2px solid black;
     width:800px;
     height:100px;
-    position:relative;
-    top:100px;
-    left:250px;
+    position:absolute;/* set the position of the navigation bar*/
+	top: 350px;
+	left: 50%;
+	transform: translate(-50%,-50%);
     background-color: lightgoldenrodyellow;
     }
     
