--- a/Virtual Lab/Lagged sphere/Calculator.html
+++ b/Virtual Lab/Lagged sphere/Calculator.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Procedure</title>
+        <title>Calculator</title>
         <!-- change or write your page title with the help of title tags-->
         <link rel="stylesheet" type="text/css" href="nav.css">
         <!-- connect css file with html useing link tag -->
@@ -122,7 +122,7 @@ ul li a:hover .name span{
             <li>
                 <!--The HTML li element is used to represent an item in a list. ... In menus and unordered lists-->
                 <!--the a tag defines a hyperlink, which is used to link from one page to another-->
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Main\Experiments.html">
+                <a href="https://project-gpreht.github.io/virtuallab/">
                     <!-- this anchor text for link your home to another page -->
                     <div class="icon">
                         <i class="fa fa-home" aria-hidden="true"></i><!-- this is home icon link get form fornt-awesome icon for home button -->	
@@ -133,7 +133,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged sphere\procedure.html">
+                <a href="./procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -144,7 +144,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged sphere\simulator.html">
+                <a href="./simulator.html">
                     <!-- this anchor text for link your service page to another page -->
                     <div class="icon">
                         <i class="fa fa-cogs" aria-hidden="true"></i><!-- this is cogs icon link get form fornt-awesome iocn for service menu -->	
@@ -155,7 +155,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged sphere\Calculator.html">
+                <a href="./Calculator.html">
                     <!-- this anchor text for link your Blog page to another page -->
                     <div class="icon">
                         <i class="fa fa-book" aria-hidden="true"></i><!-- this is Book icon link get form fornt-awesome icon for Blog --> 	
@@ -178,7 +178,113 @@ ul li a:hover .name span{
             </li>
         </ul>
         </div>
+    </div>
+    <div class="cal">
+    <h1>Observation Table:</h1>
+        <table>
+<tr>
+    <th colspan="3">Heat Input</th>
+    <th colspan="6">Inner surface temperature<sup>0</sup>C</th>
+    <th colspan="6">Outer surface temperature<sup>0</sup>C</th>
+</tr>
+<tr>
+    <th>V(volts)</th>
+    <th>I(amps)</th>
+    <th>V*I(watts)</th>
+    <th>T1</th>
+    <th>T2</th>
+    <th>T3</th>
+    <th>T4</th>
+    <th>T5</th>
+    <th>T6</th>
+    <th>T7</th>
+    <th>T8</th>
+    <th>T9</th>
+    <th>T10</th>
+    <th>T11</th>
+    <th>T12</th>
+</tr>
+<tr>
+    <td><input type="number" id="V" style="width:100px" required></td>
+    <td><input type="number" id="I" style="width:100px" required></td>
+    <td id="power"></td>
+    <td><input type="number" id="t1" style="width:60px"></td>
+    <td><input type="number" id="t2" style="width:60px"></td>
+    <td><input type="number" id="t3" style="width:60px"></td>
+    <td><input type="number" id="t4" style="width:60px"></td>
+    <td><input type="number" id="t5" style="width:60px"></td>
+    <td><input type="number" id="t6" style="width:60px"></td>
+    <td><input type="number" id="t7" style="width:60px"></td>
+    <td><input type="number" id="t8" style="width:60px"></td>
+    <td><input type="number" id="t9" style="width:60px"></td>
+    <td><input type="number" id="t10" style="width:60px"></td>
+    <td><input type="number" id="t11" style="width:60px"></td>
+    <td><input type="number" id="t12" style="width:60px"></td>
+</tr>
+</table>
+<button onclick="calculatepow()">Calculate</button>
+<p id="result"></p>
+</div>
+<script>
+function calculatepow(){
+    var V=document.getElementById('V').value;
+    var I=document.getElementById('I').value;
+    if(!isNaN(V) && !isNaN(I)){
+        var Q=V*I;
+        Q=Q.toFixed(2);
+        document.getElementById('power').innerHTML=Q;
+        var t1=parseInt(document.getElementById('t1').value);
+        var t2=parseInt(document.getElementById('t2').value);
+        var t3=parseInt(document.getElementById('t3').value);
+        var t4=parseInt(document.getElementById('t4').value);
+        var t5=parseInt(document.getElementById('t5').value);
+        var t6=parseInt(document.getElementById('t6').value);
+        var t7=parseInt(document.getElementById('t7').value);
+        var t8=parseInt(document.getElementById('t8').value);
+        var t9=parseInt(document.getElementById('t9').value);
+        var t10=parseInt(document.getElementById('t10').value);
+        var t11=parseInt(document.getElementById('t11').value);
+        var t12=parseInt(document.getElementById('t12').value);
+        var ri=0.05;
+        var ro=0.1;
+        //document.getElementById('result').innerHTML=Math.pow(3,4);
+        //document.getElementById('result').innerHTML=(t1+t2+t3)/3;
+        if(!isNaN(t1) && !isNaN(t2) && !isNaN(t3) && !isNaN(t4) && !isNaN(t5) && !isNaN(t6) && !isNaN(t7) && !isNaN(t8) && !isNaN(t9) && !isNaN(t10) && !isNaN(t11) && !isNaN(t12)){
+            var ti=((t1+t2+t3+t4+t5+t6)/6).toFixed(2);
+            var to=((t7+t8+t9+t10+t11+t12)/6).toFixed(2);
+            let res=`<h1>${'Calculation:'}</h1><p>Temperature of inner surface of hollow sphere:`;
+            res+=`<p>Tinside=<math><mfrac style="font-size:25px"><mn>T1+T2+T3+T4+T5+T6</mn><mi>6</mi></mfrac></math>${'='+ti}<sup>0</sup>C</p>`;
+            res+=`<p>Temperature of outer surface of hollow sphere:</p>`;
+            res+=`<p>Toutside=<math><mfrac style="font-size:25px"><mn>T7+T8+T9+T10+T11+T12</mn><mi>6</mi></mfrac></math>${'='+to}<sup>0</sup>C</p>`;
+            res+=`<p>${'Actual heat input Qact=V*I='+Q}W</p>`;
+            var k=((Q*(ro-ri))/(4*3.14*ri*ro*(ti-to))).toFixed(2);
+            res+=`<p>Thermal conductivity of insulating powder</p>`;
+            res+=`<p>K=<math><mfrac style="font-size:25px"><mn>Qact (ro-ri)</mn><mi>4&#8508rori(Ti-To)</mi></mfrac></math>=`+k;
+            
+            res+=`W/m-K</p>`;
+            document.getElementById('result').innerHTML=res;
+
+        }
+    }
+}
+</script>
 <style>
+    table,th,td{
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    .cal{
+        position:absolute;/* set the position of the navigation bar*/
+        top: 460px;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    button{
+        position:absolute;/* set the position of the navigation bar*/
+        top: 210px;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
     .menu{
         position:relative;
         top:30px;
