--- a/Virtual Lab/Natural convection/procedure.html
+++ b/Virtual Lab/Natural convection/procedure.html
@@ -121,7 +121,7 @@ ul li a:hover .name span{
             <li>
                 <!--The HTML li element is used to represent an item in a list. ... In menus and unordered lists-->
                 <!--the a tag defines a hyperlink, which is used to link from one page to another-->
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Main\Experiments.html">
+                <a href="https://project-gpreht.github.io/virtuallab/">
                     <!-- this anchor text for link your home to another page -->
                     <div class="icon">
                         <i class="fa fa-home" aria-hidden="true"></i><!-- this is home icon link get form fornt-awesome icon for home button -->	
@@ -132,7 +132,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\procedure.html">
+                <a href="./procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -143,7 +143,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="./simulator.html">
                     <!-- this anchor text for link your service page to another page -->
                     <div class="icon">
                         <i class="fa fa-cogs" aria-hidden="true"></i><!-- this is cogs icon link get form fornt-awesome iocn for service menu -->	
@@ -154,7 +154,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="./Calculator.html">
                     <!-- this anchor text for link your Blog page to another page -->
                     <div class="icon">
                         <i class="fa fa-book" aria-hidden="true"></i><!-- this is Book icon link get form fornt-awesome icon for Blog --> 	
@@ -210,7 +210,7 @@ ul li a:hover .name span{
 
     <div class="procedure">
         <div class="hea">
-            <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
+            <h2>Determining surface heat transfer coefficient for a vertical tube losing heat by natural convection</h2>
         </div>
         <div class="main">
             <p><strong>AIM:</strong> To determine the surface heat transfer coefficient for a vertical tube losing heat by natural convection.<br></p>
@@ -248,7 +248,7 @@ ul li a:hover .name span{
 	    The rate of energy input to heat the steel rod Q = V*I = _______W<br>
 	    The average surface temperature of the steel rod, Ts= (T1+T2+T3+T4+T5+T6+T7) / 7 =  _______ K <br>
 	    Thus the actual convection heat transfer coefficient can be evaluated as, <br>
-	     h = Q / (A*(Ts - T∞ ) W/m^2 K where A = πdl, m² <br></p>
+	     h = Q / A*(Ts - T∞ ) W/m^2 K where A = πdl, m² <br></p>
             <p><strong>Result</strong><br>
             Thermal conductivity of given insulating powder=  W/mK</p>
             
@@ -259,18 +259,20 @@ ul li a:hover .name span{
         border: 2px solid black;
         width:800px;
         height:1000px;
-        position: relative;
-        top:100px;
-        left:250px;
+        position:absolute;/* set the position of the navigation bar*/
+	    top: 900px;
+	    left: 50%;
+	    transform: translate(-50%,-50%);
         background-color: lightgoldenrodyellow;
     }
     .hea{
     border:2px solid black;
     width:800px;
     height:100px;
-    position:relative;
-    top:100px;
-    left:250px;
+    position:absolute;/* set the position of the navigation bar*/
+	top: 350px;
+	left: 50%;
+	transform: translate(-50%,-50%);
     background-color: lightgoldenrodyellow;
     }
     
