--- a/Virtual Lab/Conduction in a metal rod/procedure.html
+++ b/Virtual Lab/Conduction in a metal rod/procedure.html
@@ -132,7 +132,7 @@ ul li a:hover .name span{
                 </a>
             </li>
             <li>
-                <a href="C:\Users\hp\Desktop\Virtual Lab\Lagged cylinder\procedure.html">
+                <a href="C:\Users\hp\Desktop\Virtual Lab\Conduction in metal rod\procedure.html">
                     <!-- this anchor text for link your About page to another page -->
                     <div class="icon">
                         <i class="fa fa-file" aria-hidden="true"></i><!-- this is file icon link get form fornt-awesome icon for about -->	
@@ -210,7 +210,7 @@ ul li a:hover .name span{
 
     <div class="procedure">
         <div class="hea">
-            <h2>Test Procedure for Determining Thermal Conductivity of given Insulating Powder</h2>
+            <h2>Test Procedure for Determining Thermal Conductivity of given metal rod</h2>
         </div>
         <div class="main">
             <p><strong>AIM:</strong>To determine the thermal conductivity of given metal rod.</p>
@@ -225,13 +225,21 @@ ul li a:hover .name span{
 	    Temperature  Indicator :   Digital Type, 0-300°C, K type <br>
 	    Thermocouples Used     :   11 nos.<br></p>
             <p><strong>PROCEDURE:</strong><br>
-            1. Connect the equipment to a 230 V, 5 amps, 50 Hz electrical source <br>
-            2. Turn the dimmerstat knob clockwise and fix the heat input to a desired wattage.<br>
-            3. Allow the equipment to stabilize and attain steady state<br>
-            4. Turn the thermocouple selector switch knob clockwise and note down temperaturesT1 to T12<br>
-            5. Repeat the experiment for different heat inputs.<br>
-            <p><strong>SPECIMEN CALCULATIONS:</strong></p>
-            <p><strong>Result</strong><br>
+            1. Start the electric supply.<br>
+	    2. Start heating the bar by adjusting the heater input to say 80 V or 100 V. <br>
+	    3. Start cooling water supply through the heat sink and adjust it to around 350- 400 cc per minute. <br>
+	    4. Allow sufficient time for the apparatus to reach the steady state. <br>
+	    5. Bar temperature will start rising. Go on checking the temperatures at time intervals of 5 minutes. <br>
+	    6. When all the temperatures remain steady, note down all the observations and complete the observation table. <br>
+            <p><strong>CALCULATIONS:</strong></p>
+		1. Using the temperatures of the bar at various points, plot the temperature distribution along the length of the bar and determine the slopes of the graph (i.e. temperature drop per unit length) dT/dx at the section. <br>
+	    (Note: As the value of temperature goes on decreasing along the length of the bar, the value of the slope dT/dx is negative). <br>
+	    2. Assuming no heat loss, heat conducted through the rod = heat carried away by the cooling water <br>
+	     -K×A×dT/dx = mwCp(T11-T10) <br>
+	     Where,     k = thermal conductivity of metal rod <br>
+ 			A= cross sectional area of metal rod = πd2/4  <br>
+		        mw = mass flow rate of cooling water (kg/sec) <br>
+            <p><strong>RESULT:</strong><br>
             Thermal conductivity of given insulating powder=  W/mK</p>
             
 </p></div></div>
